[gd_scene load_steps=53 format=3 uid="uid://bun3uquelaorr"]

[ext_resource type="Script" uid="uid://dhabv6lrpnwo" path="res://scripts/ui/title/MainTitle.gd" id="1_4ignj"]
[ext_resource type="AudioStream" uid="uid://bux47n2lu0pyf" path="res://assets/audio/music/Main Title Song.ogg" id="2_wosw1"]
[ext_resource type="Texture2D" uid="uid://crjgohh4l5gga" path="res://assets/cutscenes/title/title-beach-background.png" id="3_p6dhs"]
[ext_resource type="Texture2D" uid="uid://cgmyw6iwqwxw8" path="res://assets/cutscenes/title/title-text.png" id="4_pyl7j"]
[ext_resource type="PackedScene" uid="uid://briiykqk7vfop" path="res://scenes/ui/title/MenuButton.tscn" id="5_b3w7a"]
[ext_resource type="AudioStream" uid="uid://dpvpwlk3sosd6" path="res://assets/audio/sfx/cheow.ogg" id="5_ia1n6"]
[ext_resource type="Texture2D" uid="uid://cy3tcxro6v2qm" path="res://assets/interface/ui/load.png" id="6_yql1r"]
[ext_resource type="Texture2D" uid="uid://diwyaxkx3m828" path="res://assets/interface/ui/exit.png" id="7_ia1n6"]
[ext_resource type="Texture2D" uid="uid://dn7uvuehw0m2o" path="res://assets/interface/ui/options.png" id="8_ygloa"]
[ext_resource type="AudioStream" uid="uid://dwnyjl8oi2gwc" path="res://assets/audio/sfx/blop.ogg" id="9_hiwto"]
[ext_resource type="Theme" uid="uid://bqdn1hl5c7fvl" path="res://assets/interface/themes/space-worm-theme/space_worm_theme.tres" id="11_7co7y"]
[ext_resource type="Texture2D" uid="uid://cfvlcvrc6ylsq" path="res://assets/characters/muscle_man/RipJackson_idel2size.png" id="11_7m88i"]
[ext_resource type="Texture2D" uid="uid://bilktb84t5goh" path="res://assets/characters/muscle_man/RipJackson_peckflex2size.png" id="12_u6xm4"]
[ext_resource type="Texture2D" uid="uid://ol8fdcuahnvr" path="res://assets/characters/muscle_man/RipJackson_walk2size.png" id="13_qtduq"]
[ext_resource type="Script" uid="uid://dymyvwuyug16w" path="res://scripts/characters/MuscleMan.gd" id="15_7co7y"]
[ext_resource type="AudioStream" uid="uid://du4sq6cemirw4" path="res://assets/audio/sfx/grunt.ogg" id="15_qtduq"]
[ext_resource type="Texture2D" uid="uid://1lct1vu4aghb" path="res://assets/characters/crab/crab1.png" id="16_33tnq"]
[ext_resource type="Texture2D" uid="uid://by7tx7memfuws" path="res://assets/characters/crab/crab2.png" id="17_wolko"]
[ext_resource type="Texture2D" uid="uid://g4upotewd1ff" path="res://assets/characters/crab/crab3.png" id="18_pj3ct"]
[ext_resource type="Texture2D" uid="uid://cm8m3c4ha8nwn" path="res://assets/characters/crab/crab4.png" id="19_v5lw2"]
[ext_resource type="Texture2D" uid="uid://cduvg45db6x34" path="res://assets/characters/crab/crab5.png" id="20_v5lw2"]
[ext_resource type="AudioStream" uid="uid://cbun1ts2e1203" path="res://assets/audio/sfx/ohno.ogg" id="22_7co7y"]
[ext_resource type="Script" uid="uid://c4r2srw1jrpt6" path="res://scripts/characters/Crab.gd" id="22_sqsfs"]
[ext_resource type="AudioStream" uid="uid://crdbghfx0kv4j" path="res://assets/audio/sfx/blip.ogg" id="26_bd6g4"]
[ext_resource type="AudioStream" uid="uid://blyy4qd322wkd" path="res://assets/audio/sfx/lifeup.ogg" id="26_wr6yv"]
[ext_resource type="AudioStream" uid="uid://dhlp5d5he2cwc" path="res://assets/audio/sfx/hurt.ogg" id="27_p8na0"]
[ext_resource type="AudioStream" uid="uid://d1gauqxolvwmu" path="res://assets/audio/sfx/warning.ogg" id="29_rc7li"]
[ext_resource type="AudioStream" uid="uid://bia60cj7of2o4" path="res://assets/audio/sfx/recordscratch.ogg" id="30_yrge2"]

[sub_resource type="Animation" id="Animation_4rr2b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/MainTitleImage:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_b3w7a"]
resource_name = "title_bounce"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/MainTitleImage:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08012398, 0.19921489, 0.38301656, 0.6668869),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(2, 2), Vector2(0.8, 0.8), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainTitleSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_ia1n6")
}],
"times": PackedFloat32Array(0.0053672)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yql1r"]
_data = {
&"RESET": SubResource("Animation_4rr2b"),
&"title_bounce": SubResource("Animation_b3w7a")
}

[sub_resource type="Animation" id="Animation_ia1n6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/ExitButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1536, 1280)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/NewButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(384, 1280)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/LoadButton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(768, 1280)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/OptionsButton:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1152, 1280)]
}

[sub_resource type="Animation" id="Animation_yql1r"]
resource_name = "buttons_enter"
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonEnterSound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_hiwto")
}],
"times": PackedFloat32Array(0.0333)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonEnterSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_hiwto")
}],
"times": PackedFloat32Array(0.18333334)
}
tracks/1/use_blend = true
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ButtonEnterSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_hiwto")
}],
"times": PackedFloat32Array(0.33333334)
}
tracks/2/use_blend = true
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ButtonEnterSound")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_hiwto")
}],
"times": PackedFloat32Array(0.48333332)
}
tracks/3/use_blend = true
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("UI/NewButton:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.060269695, 0.14748621, 0.2422921, 0.37729585),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(200, 1280), Vector2(200, 850), Vector2(200, 950), Vector2(200, 875), Vector2(200, 940)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("UI/LoadButton:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2050744, 0.29051018, 0.38962683, 0.5237762),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(600, 1280), Vector2(600, 850), Vector2(600, 950), Vector2(600, 875), Vector2(600, 940)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("UI/OptionsButton:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.33858123, 0.42743483, 0.52484256, 0.65813744),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1250, 1280), Vector2(1250, 850), Vector2(1250, 950), Vector2(1250, 875), Vector2(1250, 940)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("UI/ExitButton:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.4905922, 0.5794458, 0.67856246, 0.8135662),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1700, 1280), Vector2(1700, 850), Vector2(1700, 950), Vector2(1700, 875), Vector2(1700, 940)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hiwto"]
_data = {
&"RESET": SubResource("Animation_ia1n6"),
&"buttons_enter": SubResource("Animation_yql1r")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_1almk"]
atlas = ExtResource("11_7m88i")
region = Rect2(0, 0, 256, 304)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq7oa"]
atlas = ExtResource("11_7m88i")
region = Rect2(256, 0, 256, 304)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6xm4"]
atlas = ExtResource("11_7m88i")
region = Rect2(512, 0, 256, 304)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtduq"]
atlas = ExtResource("11_7m88i")
region = Rect2(768, 0, 256, 304)

[sub_resource type="AtlasTexture" id="AtlasTexture_aogo0"]
atlas = ExtResource("11_7m88i")
region = Rect2(1024, 0, 256, 304)

[sub_resource type="AtlasTexture" id="AtlasTexture_857rl"]
atlas = ExtResource("11_7m88i")
region = Rect2(1280, 0, 256, 304)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp3px"]
atlas = ExtResource("12_u6xm4")
region = Rect2(0, 0, 256, 304)

[sub_resource type="AtlasTexture" id="AtlasTexture_33tnq"]
atlas = ExtResource("12_u6xm4")
region = Rect2(256, 0, 256, 304)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4rsq"]
atlas = ExtResource("13_qtduq")
region = Rect2(0, 0, 256, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_u02kv"]
atlas = ExtResource("13_qtduq")
region = Rect2(256, 0, 256, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_44ua4"]
atlas = ExtResource("13_qtduq")
region = Rect2(512, 0, 256, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_wntcn"]
atlas = ExtResource("13_qtduq")
region = Rect2(768, 0, 256, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt84c"]
atlas = ExtResource("13_qtduq")
region = Rect2(1024, 0, 256, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_706a6"]
atlas = ExtResource("13_qtduq")
region = Rect2(1280, 0, 256, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_pipf5"]
atlas = ExtResource("13_qtduq")
region = Rect2(1536, 0, 256, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_bia3f"]
atlas = ExtResource("13_qtduq")
region = Rect2(1792, 0, 256, 280)

[sub_resource type="SpriteFrames" id="SpriteFrames_vp3px"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1almk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq7oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6xm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtduq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aogo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_857rl")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp3px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33tnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp3px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33tnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp3px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33tnq")
}],
"loop": false,
"name": &"pecs",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4rsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u02kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44ua4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wntcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt84c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_706a6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pipf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bia3f")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_7co7y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_33tnq")
}, {
"duration": 1.0,
"texture": ExtResource("17_wolko")
}, {
"duration": 1.0,
"texture": ExtResource("16_33tnq")
}, {
"duration": 1.0,
"texture": ExtResource("18_pj3ct")
}, {
"duration": 1.0,
"texture": ExtResource("19_v5lw2")
}, {
"duration": 1.0,
"texture": ExtResource("18_pj3ct")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_33tnq")
}, {
"duration": 1.0,
"texture": ExtResource("20_v5lw2")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[node name="MainTitle" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_4ignj")

[node name="UI" type="Node" parent="."]

[node name="MainTitleFadeRect" type="ColorRect" parent="UI"]
modulate = Color(0, 0, 0, 1)
z_index = 5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -2.0
offset_right = 1923.0
offset_bottom = 1084.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Background" type="Sprite2D" parent="UI"]
position = Vector2(961.99994, 507.5)
scale = Vector2(1.250651, 1.1240234)
texture = ExtResource("3_p6dhs")

[node name="MainTitleImage" type="Sprite2D" parent="UI"]
position = Vector2(965.3539, 382.3)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("4_pyl7j")

[node name="MainTitleTextAnimation" type="AnimationPlayer" parent="UI"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_yql1r")
}

[node name="MainTitleButtonAnimation" type="AnimationPlayer" parent="UI"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_hiwto")
}

[node name="NewButton" parent="UI" instance=ExtResource("5_b3w7a")]
offset_left = 384.0
offset_top = 1280.0
offset_right = 384.0
offset_bottom = 1280.0

[node name="ButtonHit" parent="UI/NewButton/HitBox" index="0"]
debug_color = Color(0, 0.6, 0.69803923, 0)

[node name="LoadButton" parent="UI" instance=ExtResource("5_b3w7a")]
offset_left = 768.0
offset_top = 1280.0
offset_right = 768.0
offset_bottom = 1280.0

[node name="ButtonImage" parent="UI/LoadButton" index="0"]
texture = ExtResource("6_yql1r")

[node name="OptionsButton" parent="UI" instance=ExtResource("5_b3w7a")]
offset_left = 1152.0
offset_top = 1280.0
offset_right = 1152.0
offset_bottom = 1280.0

[node name="ButtonImage" parent="UI/OptionsButton" index="0"]
texture = ExtResource("8_ygloa")

[node name="ExitButton" parent="UI" instance=ExtResource("5_b3w7a")]
offset_left = 1536.0
offset_top = 1280.0
offset_right = 1536.0
offset_bottom = 1280.0

[node name="ButtonImage" parent="UI/ExitButton" index="0"]
texture = ExtResource("7_ia1n6")

[node name="HitTimer" type="Timer" parent="UI"]
one_shot = true

[node name="MuscleMan" type="AnimatedSprite2D" parent="UI"]
position = Vector2(910, 786)
sprite_frames = SubResource("SpriteFrames_vp3px")
animation = &"walk"
script = ExtResource("15_7co7y")

[node name="Crab" type="AnimatedSprite2D" parent="UI"]
position = Vector2(-99.99997, 761)
scale = Vector2(0.18499999, 0.185)
sprite_frames = SubResource("SpriteFrames_7co7y")
animation = &"idle"
frame_progress = 0.32896388
script = ExtResource("22_sqsfs")

[node name="Systems" type="Node" parent="."]

[node name="ModalLayer" type="CanvasLayer" parent="Systems"]
visible = false

[node name="ModalRoot" type="Control" parent="Systems/ModalLayer"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="QuitDialog" type="ConfirmationDialog" parent="Systems"]
oversampling_override = 1.0
initial_position = 1
size = Vector2i(600, 375)
always_on_top = true
max_size = Vector2i(1920, 1080)
theme = ExtResource("11_7co7y")
dialog_text = "Are you sure you want to throw in the towel?"
dialog_autowrap = true

[node name="DeleteDialog" type="ConfirmationDialog" parent="Systems"]
oversampling_override = 1.0
initial_position = 1
size = Vector2i(600, 392)
dialog_text = "Are you sure you want to delete this save file?"
dialog_autowrap = true

[node name="DialogOverlay" type="ColorRect" parent="Systems"]
visible = false
z_index = 5
custom_minimum_size = Vector2(1920, 1080)
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.7411765)

[node name="MainTitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_wosw1")
bus = &"Music"

[node name="MainTitleSound" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="ButtonEnterSound" type="AudioStreamPlayer" parent="."]
volume_db = -6.0
bus = &"SFX"

[node name="ButtonHoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_bd6g4")
bus = &"SFX"

[node name="SuccessSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_wr6yv")
bus = &"SFX"

[node name="CancelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("27_p8na0")
bus = &"SFX"

[node name="WarningConfirmSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("29_rc7li")
bus = &"SFX"

[node name="ExitConfirmSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("30_yrge2")
bus = &"SFX"

[node name="CrabSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_7co7y")
bus = &"SFX"

[node name="MuscleManSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_qtduq")
volume_db = 10.0
bus = &"SFX"

[editable path="UI/NewButton"]
[editable path="UI/LoadButton"]
[editable path="UI/OptionsButton"]
[editable path="UI/ExitButton"]
